# invest-signal-kit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: backtest.md  design.md  framework.md  journal.md  monte_carlo.md  optimizer.md  portfolio.md  rebalance.md  ui.md  usage.md
docs/superpowers/plans/: 2026-05-24-a-share-consumer-redesign.md
docs/superpowers/specs/: 2026-05-24-a-share-consumer-redesign-design.md
examples/: backtest_scenario.json  benchmark.csv  decision_journal.json  etf_signal.json  generated_scenario.json  holdings.csv  invalid_action_signal.json  macro_context.json  monte_carlo_config.json  monte_carlo_stress.json  optimizer_config.json  portfolio_workflow.json  prices.csv  professional_signal.json  rebalance_plan.json  signals.csv  stock_shift_signal.json
invest_signal_kit/: __init__.py  __main__.py  backtest.py  cli.py  framework.py  importer.py  journal.py  loader.py  monte_carlo.py  optimizer.py  portfolio.py  rebalance.py  render.py  scenario_builder.py  schema.py  scoring.py  validators.py
tests/: test_all.py  test_consumer_ui.js  test_consumer_ui_runner.py  test_web_import.js
web/: app.js  consumer.js  index.html  styles.css
web/i18n/: en.js  i18n.js  zh.js
